GSLT/src/test/module/bad/BadBindEmpty.module
Module BadBindEmpty {
  Theory Bad() {
    Nil
      Exports { Proc; Name; }
      Terms {
        PRecv . Proc ::= "for" "(" (Bind Name []) "<-" Name ")" "{" Proc "}" ;
      }
  }
}